# xson

./: README.md  default.nix  stack.yaml  xson.cabal
nixpkgs/: default.nix  overlays.nix
src/: Lib.hs
src-criterion/: Main.hs
src-test/: Main.hs
src-weigh/: Main.hs
src/Data/: Xson.hs
src/Data/Xson/: FromJSON.hs
xson/: default.nix  shell.nix  xson.cabal
xson-bench-test/: default.nix  xson-bench-test.cabal
xson-bench-test/src-criterion/: Main.hs
xson-bench-test/src-test/: Main.hs
xson-bench-test/src-weigh/: Main.hs
xson-conduit/: default.nix  stack.yaml  xson-conduit.cabal
xson-conduit/src/Data/Xson/Conduit/: FromJSON.hs
xson-pipes/: default.nix  xson-pipes.cabal
xson-pipes/src/Data/Xson/Pipes/: FromJSON.hs
xson/src-criterion/: Main.hs
xson/src-test/: Main.hs
