name:                xson-bench-test
version:             0.1.0.0
-- synopsis:
-- description:

license:             ISC
license-file:        LICENSE
author:              Will Fancher
maintainer:          elvishjerricco@gmail.com
copyright:           © 2017 Will Fancher
homepage:            https://github.com/ElvishJerricco/xson
bug-reports:         https://github.com/ElvishJerricco/xson/issues

category:            Test
build-type:          Simple
stability:           alpha (experimental)
cabal-version:       >=1.10

-- extra-source-files:

source-repository head
  type:     git
  location: https://github.com/ElvishJerricco/xson

library
  default-language:  Haskell2010

test-suite xson-test
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  ghc-options:       -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    src-test
  main-is:           Main.hs
  build-depends:     base >= 4.8 && < 5
                   , xson
                   , xson-pipes
                   , xson-conduit
                   , tasty >= 0.11
                   , tasty-hunit >= 0.9
                   -- , tasty-quickcheck >= 0.8
                   , bytestring
                   , aeson
                   , lens
                   , these

benchmark xson-benchmark-criterion
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  ghc-options:       -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    src-criterion
  main-is:           Main.hs
  build-depends:     base >= 4.8 && < 5
                   , criterion
                   , xson
                   , xson-pipes
                   , xson-conduit
                   , bytestring
                   , aeson

benchmark xson-benchmark-weigh
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  ghc-options:       -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    src-weigh
  main-is:           Main.hs
  build-depends:     base >= 4.8 && < 5
                   , weigh
                   , xson
                   , xson-pipes
                   , xson-conduit
                   , bytestring
                   , aeson
