name:                xson-pipes
version:             0.1.0.0
-- synopsis:
-- description:

license:             ISC
license-file:        LICENSE
author:              Will Fancher
maintainer:          elvishjerricco@gmail.com
copyright:           © 2017 Will Fancher
homepage:            https://github.com/ElvishJerricco/xson
bug-reports:         https://github.com/ElvishJerricco/xson/issues

category:            Test
build-type:          Simple
stability:           alpha (experimental)
cabal-version:       >=1.10

-- extra-source-files:

source-repository head
  type:     git
  location: https://github.com/ElvishJerricco/xson

library
  default-language:  Haskell2010
  ghc-options:       -Wall -O2
  hs-source-dirs:    src
  exposed-modules:   Data.Xson.Pipes.FromJSON
  build-depends:     base >= 4.8 && < 5
                   , xson
                   , bytestring
                   , scientific
                   , unordered-containers
                   , text
                   , vector
                   , aeson
                   , mtl
                   , pipes
                   , transformers
